Fixed alignment issue on "recurring" button of scheduler

--- a/rootio/static/css/schedule.css
+++ b/rootio/static/css/schedule.css
@@ -42,12 +42,12 @@
 }
 
 #addable-programs li.recurring-button {
-    height:20px;
-    margin:0px 0;
+    height:30px;
+    margin:5px 20px 10px 0;
 }
 
 #addable-programs button {
-    margin-bottom:10px;
+    margin-bottom:30px;
     float:left;
 }
 
